Update release notes

--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -1,10 +1,25 @@
 BCRHP 1.1.0 release notes
 ------------------------
+This release implements changes to support deployment to the public
 
-# 947 - Public Site CSV output
-- Introduces changes for single view for including resource tile data for DataBC and Heritage Site CSV Export
-- NOTE: the migration requires a seeded database to apply the DB statements for the logic,
-  run the following command to apply the changes:
 
-        python3 migrate.py migrate
+# Bug fixes and enhancements
+- 636 - Update site search card attributes
+- 944 -
+- 947 - Public Site CSV output
+  - Introduces changes for single view for including resource tile data for DataBC and Heritage Site CSV Export
+  - NOTE: the migration requires a seeded database to apply the DB statements for the logic,
+    run the following command to apply the changes:
 
+
+### Dependency changes:
+```
+Python:
+    Upgraded:
+        Arches 7.5.0 > 7.5.3
+```
+
+This release relaxes the upper bound on Django to add compatibility with further Django 4.2.x patch releases without requiring a corresponding Arches patch release.
+
+### Upgrading BCRHP
+`# python3 migrate.py migrate`
