--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -6,6 +6,8 @@ This release implements changes to support deployment to the public
 # Bug fixes and enhancements
 - 636 - Update site search card attributes
 - 944 -
+- 893 - Remove public access from all non-public resource models and node groups
+- 694 - Remove public access from restricted sites
 - 947 - Public Site CSV output
   - Introduces changes for single view for including resource tile data for DataBC and Heritage Site CSV Export
   - NOTE: the migration requires a seeded database to apply the DB statements for the logic,
