--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -5,6 +5,7 @@ This release implements changes to support deployment to the public
 
 # Bug fixes and enhancements
 - 636 - Update site search card attributes
+- 967 - Conditions added to hide detail sections for internal users
 - 944 -
 - 947 - Public Site CSV output
   - Introduces changes for single view for including resource tile data for DataBC and Heritage Site CSV Export
