--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -5,6 +5,7 @@ This release implements changes to support deployment to the public
 
 # Bug fixes and enhancements
 - 636 - Update site search card attributes
+- 909 - Update URL prefix from /int/bcrhp/ to /bcrhp/ for public access
 - 967 - Conditions added to hide detail sections for internal users
 - 944 - Landing page updates
 - 893 - Remove public access from all non-public resource models and node groups
