--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -6,24 +6,37 @@ This release implements changes to support deployment to the public
 # Bug fixes and enhancements
 - 636 - Update site search card attributes
 - 909 - Update URL prefix from /int/bcrhp/ to /bcrhp/ for public access
+- 665 - Update visibility of map layers (public/internal users)
 - 967 - Conditions added to hide detail sections for internal users
 - 944 - Landing page updates
+- 992 - Add Resource exporter group to anonymous user
 - 893 - Remove public access from all non-public resource models and node groups
 - 694 - Remove public access from restricted sites
+- 910 - Use OIDC for authentication
+- MPL - Update Heritage site details card
 - 947 - Public Site CSV output
   - Introduces changes for single view for including resource tile data for DataBC and Heritage Site CSV Export
   - NOTE: the migration requires a seeded database to apply the DB statements for the logic,
     run the following command to apply the changes:
 
-
 ### Dependency changes:
 ```
 Python:
     Upgraded:
-        Arches 7.5.0 > 7.5.3
+        Arches 7.5.0 > 7.5.2
 ```
 
 This release relaxes the upper bound on Django to add compatibility with further Django 4.2.x patch releases without requiring a corresponding Arches patch release.
+### BEFORE UPGRADING (!!! IMPORTANT !!!)
+
+Backup database:
+
+    # cd /apps_ux/apps_[env]/backups && mkdir database && cd database
+    # pg_dump -Upostgres bchrp > 2024-07-19_pre_1.1.0.sql
+    # gzip 2024-07-19_pre_1.1.0.sql
 
 ### Upgrading BCRHP
+1. Apply migrations
 `# python3 migrate.py migrate`
+2. Reindex heritage site to pickup descriptor changes
+`# python3 manage.py es index_resources_by_type -rt cef9c510-e3e6-4057-ac08-89ad926180b4k`
