dev - Fix UUID in reindex call

--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -37,6 +37,8 @@ Backup database:
 
 ### Upgrading BCRHP
 1. Apply migrations
+
 `# python3 migrate.py migrate`
 2. Reindex heritage site to pickup descriptor changes
-`# python3 manage.py es index_resources_by_type -rt cef9c510-e3e6-4057-ac08-89ad926180b4k`
+
+`# python3 manage.py es index_resources_by_type -rt cef9c510-e3e6-4057-ac08-89ad926180b4 --recalculate-descriptors`
