dev - Update deployment instructions

--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -36,9 +36,17 @@ Backup database:
     # gzip 2024-07-19_pre_1.1.0.sql
 
 ### Upgrading BCRHP
-1. Apply migrations
+1. Add privileged user config and apply migrations
 
-`# python3 migrate.py migrate`
-2. Reindex heritage site to pickup descriptor changes
+```
+# cd /apps_ux/apps_<env>
+# source bcrhp_<env>_venv/bin/activate
+# cd bcrhp
+# vi bcrhp/settings_admin.py
+    File should contain:
+       PG_SUPERUSER="postgres"
+       PG_SUPERUSER_PW="<postgres user>"
+# python3 manage.py migrate
+# rm bcrhp/settings_admin.py
+```
 
-`# python3 manage.py es index_resources_by_type -rt cef9c510-e3e6-4057-ac08-89ad926180b4 --recalculate-descriptors`
