--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -1,20 +1,33 @@
 BCRHP 1.1.0 release notes
 ------------------------
-This release implements changes to support deployment to the public
+This release implements changes to support public access
 
 
 # Bug fixes and enhancements
+- 75  - UI updates
 - 636 - Update site search card attributes
-- 909 - Update URL prefix from /int/bcrhp/ to /bcrhp/ for public access
-- 665 - Update visibility of map layers (public/internal users)
+- 821 - Remove local fix for file URL Arches core bug
+- 886 - Limit access to site from public
+- 887/959 - Update details page content and layout
+- 890/944 - Update landing page
+- 893 - Limit publicly visible resource types
+- 908/909 - Update URL prefix from /int/bcrhp/ to /bcrhp/ for public access
+- 910,995 - Use OIDC for authentication
+- 917 - Update CI/CD for PROD patches
+- 923 - Update Arches Core to 7.5.2
+- 665/666 - Map layer updates
+- 947 - Public Site CSV output
+- 948 - Format PDF output of details page
+- 961 - Add help panel to details page
 - 967 - Conditions added to hide detail sections for internal users
 - 944 - Landing page updates
+- 983 - Remove large numbers of addresses
 - 992 - Add Resource exporter group to anonymous user
 - 893 - Remove public access from all non-public resource models and node groups
 - 694 - Remove public access from restricted sites
-- 910 - Use OIDC for authentication
-- MPL - Update Heritage site details card
-- 947 - Public Site CSV output
+- Update Heritage site details card
+- 931 - Updates for mobile devices
+- 933 - Fix filename generator for system_settings graph for saved searches
   - Introduces changes for single view for including resource tile data for DataBC and Heritage Site CSV Export
   - NOTE: the migration requires a seeded database to apply the DB statements for the logic,
     run the following command to apply the changes:
