910 - Handle changes in IDIR usernames between DEV, TEST and PROD, run blackd

--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -3,7 +3,7 @@ BCRHP 1.1.0 release notes
 This release implements changes to support public access
 
 
-# Bug fixes and enhancements
+### Bug fixes and enhancements
 - 75  - UI updates
 - 636 - Update site search card attributes
 - 821 - Remove local fix for file URL Arches core bug
