dev - Update README instructions

--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -45,8 +45,16 @@ This release relaxes the upper bound on Django to add compatibility with further
 Backup database:
 
     # cd /apps_ux/apps_[env]/backups && mkdir database && cd database
-    # pg_dump -Upostgres bchrp > 2024-07-19_pre_1.1.0.sql
-    # gzip 2024-07-19_pre_1.1.0.sql
+    # pg_dump -Upostgres bchrp > 2024-07-23_pre_1.1.0.sql
+    # gzip 2024-07-23_pre_1.1.0.sql
+
+Update Apache configuration for new context root and restart server:
+
+    # cp /sw_ux/httpd01/conf.d/vhosts.conf /sw_ux/httpd01/conf.d/vhosts.conf.20240724
+    # vi /sw_ux/httpd01/conf.d/vhosts.conf
+    > :%s/int\/bcrhp/bcrhp/g
+    > :wq
+    # sudo systemctl restart httpd01
 
 ### Upgrading BCRHP
 1. Add privileged user config and apply migrations
