dev - Final updates to the BCRHP 1.1.0 release notes

--- a/src/bcrhp/bcrhp/releases/1.1.0.md
+++ b/src/bcrhp/bcrhp/releases/1.1.0.md
@@ -44,19 +44,27 @@ This release relaxes the upper bound on Django to add compatibility with further
 
 Backup database:
 
+    # sudo -u wwwadm /bin/bash
     # cd /apps_ux/apps_[env]/backups && mkdir database && cd database
-    # pg_dump -Upostgres bchrp > 2024-07-23_pre_1.1.0.sql
+    # pg_dump -Upostgres bchrp_[env] > 2024-07-23_pre_1.1.0.sql
     # gzip 2024-07-23_pre_1.1.0.sql
+    # chmod 400 2024-07-23_pre_1.1.0.sql.gz
+    # cd ..
+    # chmod 500 database
 
 Update Apache configuration for new context root and restart server:
 
-    # cp /sw_ux/httpd01/conf.d/vhosts.conf /sw_ux/httpd01/conf.d/vhosts.conf.20240724
-    # vi /sw_ux/httpd01/conf.d/vhosts.conf
+    # cd /sw_ux/httpd01/conf.d/
+    # cp vhosts.conf vhosts.conf.20240723
+    # vi vhosts.conf
     > :%s/int\/bcrhp/bcrhp/g
     > :wq
+    # exit
     # sudo systemctl restart httpd01
 
-### Upgrading BCRHP
+### Perform deployment
+
+### Upgrade BCRHP
 1. Add privileged user config and apply migrations
 
 ```
