dev - Tweak readme

--- a/src/bcrhp/bcrhp/releases/1.1.1.md
+++ b/src/bcrhp/bcrhp/releases/1.1.1.md
@@ -1,6 +1,6 @@
 BCRHP 1.1.1 release notes
 ------------------------
-This release implements changes to support public access
+Minor bug fix release
 
 ### Bug fixes and enhancements
 - 1032 - Add link to how to search PDF, grey out video links
@@ -17,11 +17,10 @@ Backup database:
     # sudo -u wwwadm /bin/bash
     # cd /apps_ux/apps_[env]/backups/database
     # chmod 700 .
-    # pg_dump -Upostgres bchrp_[env] > 2024-07-24_pre_1.1.1.sql
+    # pg_dump -Upostgres bcrhp_[env] > 2024-07-24_pre_1.1.1.sql
     # gzip 2024-07-24_pre_1.1.1.sql
     # chmod 400 2024-07-24_pre_1.1.1.sql.gz
-    # cd ..
-    # chmod 500 database
+    # chmod 500 .
 
 ### 2. Perform Application deployment
 
