1075 - Fix null sortorder values in graph JSON - hotfix in database

--- a/src/bcrhp/bcrhp/releases/1.2.0.md
+++ b/src/bcrhp/bcrhp/releases/1.2.0.md
@@ -3,13 +3,14 @@ BCRHP 1.2.0 release notes
 Minor bug fix release
 
 ### Bug fixes and enhancements
-- 608  - Allow improt of Shapefile
+- 608  - Allow import of Shapefile
 - 975  - Add/Remove Recognition Types LOVs
 - 1044 - Ability to export > 2000 records
 - 1040 - Missing Recognition End Date on details tab
 - 1024 - Display Multiple SoSs
 - 1041 - "None" displayed when attributes empty
 - 1048 - Title visible for empty attributes
+- 1075 - Fix widgets with null sort order
 
 ### Dependency changes:
 None
