1075 - Update readme with specifics of what was changed

--- a/src/bcrhp/bcrhp/releases/1.2.0.md
+++ b/src/bcrhp/bcrhp/releases/1.2.0.md
@@ -1,6 +1,8 @@
 BCRHP 1.2.0 release notes
 ------------------------
-Minor bug fix release
+Minor bug fix release.
+Note for 1075 - the source JSON files and the values in the database have been updated, however
+the serialized graph in the `published_graphs` table was not updated.
 
 ### Bug fixes and enhancements
 - 608  - Allow import of Shapefile
