--- a/src/bcrhp/bcrhp/releases/1.2.0.md
+++ b/src/bcrhp/bcrhp/releases/1.2.0.md
@@ -20,21 +20,34 @@ None
 ### 1. BEFORE UPGRADING (!!! IMPORTANT !!!)
 
 Backup database:
-
-    # sudo -u wwwadm /bin/bash
-    # cd /apps_ux/apps_[env]/backups/database
-    # chmod 700 .
-    # pg_dump -Upostgres bcrhp_[env] > 2024-07-24_pre_1.1.1.sql
-    # gzip 2024-07-24_pre_1.1.1.sql
-    # chmod 400 2024-07-24_pre_1.1.1.sql.gz
-    # chmod 500 .
+```shell
+# sudo -u wwwadm /bin/bash
+# cd /apps_ux/apps_[env]/backups/database
+# chmod 700 .
+# pg_dump -Upostgres bcrhp_[env] > 2024-10-15_pre_1.2.0.sql
+# gzip 2024-10-15_pre_1.2.0.sql
+# chmod 400 2024-10-15_pre_1.2.0.sql.gz
+# chmod 500 .
+```
 
 ### 2. Perform Application deployment
 
 ### 3. Upgrade BCRHP
-```
+```shell
+# sudo -uwwwadm /bin/bash
 # cd /apps_ux/apps_<env>
 # source bcrhp_<env>_venv/bin/activate
 # cd bcrhp
 # python3 manage.py migrate
+```
+
+### 4. Ensure Celery is running and serving. If not perform the following steps:
+Check fif celery is running
+```shell
+# ps -ef | grep bcrhp_<env> | grep celery
+```
+Restart the celery s6 service:
+```shell
+# sudo -uwwwsvr /bin/bash
+# s6-svc -h /apps_ux/s6_services/bcrhp_celery_test
 ```
