1111 - Add missing submission documents widget config & create patch migration 1036 - Remove duplicate resourceid header dev - Update release readme

--- a/src/bcrhp/bcrhp/releases/1.2.0.md
+++ b/src/bcrhp/bcrhp/releases/1.2.0.md
@@ -7,12 +7,16 @@ the serialized graph in the `published_graphs` table was not updated.
 ### Bug fixes and enhancements
 - 608  - Allow import of Shapefile
 - 975  - Add/Remove Recognition Types LOVs
+- 989  - Show details button on map popup
 - 1044 - Ability to export > 2000 records
 - 1040 - Missing Recognition End Date on details tab
+- 1036 - Enable shapefile export with updated attributes
 - 1024 - Display Multiple SoSs
 - 1041 - "None" displayed when attributes empty
 - 1048 - Title visible for empty attributes
 - 1075 - Fix widgets with null sort order
+- 1108 - Fix cards with null sort order
+- 1111 - Add missing widget config for Submission Documents
 
 ### Dependency changes:
 None
@@ -49,5 +53,5 @@ Check fif celery is running
 Restart the celery s6 service:
 ```shell
 # sudo -uwwwsvr /bin/bash
-# s6-svc -h /apps_ux/s6_services/bcrhp_celery_test
+# s6-svc -h /apps_ux/s6_services/bcrhp_celery_<env>
 ```
