1057 - Add missing issue into bugfix list

--- a/src/bcrhp/bcrhp/releases/1.2.0.md
+++ b/src/bcrhp/bcrhp/releases/1.2.0.md
@@ -14,6 +14,7 @@ the serialized graph in the `published_graphs` table was not updated.
 - 1024 - Display Multiple SoSs
 - 1041 - "None" displayed when attributes empty
 - 1048 - Title visible for empty attributes
+- 1057 - Fixed issue with borden number creation
 - 1075 - Fix widgets with null sort order
 - 1108 - Fix cards with null sort order
 - 1111 - Add missing widget config for Submission Documents
