1170 - Move migration SQL scripts to seperate files, add util file, refactor map data migration to use new framework

--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -45,3 +45,14 @@ Backup database:
 # rm bcfms/settings_admin.py
 ```
 
+### 3. Run migrations (Needs to be phased to handle recreation of core functions)
+```shell
+# sudo -uwwwadm /bin/bash
+# cd /apps_ux/apps_<env>
+# source bcfms_<env>_venv/bin/activate
+# cd bcfms
+# python3 manage.py migrate bcfms 1082_drop_materialized_views
+# python3 manage.py migrate models
+# python3 manage.py migrate
+```
+
