1082 - Fixed migration dependencies for core models migrations, updated readme

--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -29,6 +29,13 @@ Backup database:
 # chmod 500 .
 
 ### Perform deployment
+# The `migrations` variable must be set as follows (empty line ensure migrations are complete):
+```yaml
+migrations:
+  - "bcfms 1082_drop_materialized_views"
+  - "models"
+  - ""
+```
 
 ### Upgrade BCFMS
 1. Add privileged user config and apply migrations
@@ -51,8 +58,8 @@ Backup database:
 # cd /apps_ux/apps_<env>
 # source bcfms_<env>_venv/bin/activate
 # cd bcfms
-# python3 manage.py migrate bcfms 1082_drop_materialized_views
-# python3 manage.py migrate models
-# python3 manage.py migrate
+# python3.11 manage.py migrate bcfms 1082_drop_materialized_views
+# python3.11 manage.py migrate models
+# python3.11 manage.py migrate
 ```
 
