1156 - Split common functionality into bcgov_arches_common package, rework docker config 1146 - fix BCFMS splash page caption dev - Reformat with black

--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -63,3 +63,13 @@ migrations:
 # python3.11 manage.py migrate
 ```
 
+### 4. Reindex the database
+After all migrations have been completed the database needs to be re-indexed to
+pickup the geometry feature IDs.
+```shell
+# sudo -uwwwadm /bin/bash
+# cd /apps_ux/apps_<env>
+# source bcfms_<env>_venv/bin/activate
+# cd bcfms
+# python manage.py bc_reindex_database
+```
