--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -21,6 +21,9 @@ Backup database:
 ```
 
 ### 2. Perform Application deployment
+Need to update the vhosts.conf to point to the 3.12 version of the WSGI library
+Need to restart the Apache HTTPD server before the build_development call
+to pick up the new VENV
 
 ### 3. Run migrations (Needs to be phased to handle recreation of core functions)
 ```shell
@@ -31,4 +34,16 @@ Backup database:
 # python3 manage.py migrate bcrhp 1081_drop_materialized_views
 # python3 manage.py migrate models
 # python3 manage.py migrate
+```
+
+
+### 4. Reindex the database
+After all migrations have been completed the database needs to be re-indexed to
+pickup the geometry feature IDs.
+```shell
+# sudo -uwwwadm /bin/bash
+# cd /apps_ux/apps_<env>
+# source bcrhp_<env>_venv/bin/activate
+# cd bcrhp
+# python manage.py bc_reindex_database
 ```
