--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -18,8 +18,8 @@ Nodejs > 20.16.0
 This release relaxes the upper bound on Django to add compatibility with further Django 4.2.x patch releases without requiring a corresponding Arches patch release.
 ### BEFORE UPGRADING (!!! IMPORTANT !!!)
 
-Backup database:
-
+1. Backup database:
+```shell
 # sudo -u wwwadm /bin/bash
 # cd /apps_ux/apps_[env]/backups/database
 # chmod 700 .
@@ -27,9 +27,30 @@ Backup database:
 # gzip 2024-11-28_bcfms_pre_1.1.0.sql
 # chmod 400 2024-11-28_bcfms_pre_1.1.0.sql.gz
 # chmod 500 .
+```
 
-### Perform deployment
-# The `migrations` variable must be set as follows (empty line ensure migrations are complete):
+### 2. Update WSGI module in Apache (First deployment only)
+
+To allow the deployment to complete cleanly, a 3.12 version of `mod_wsgi` needs to be deployed as follows:
+```shell
+sudo -uwwwadm /bin/bash
+cd /apps_ux/apps_(dlvr|test|prod)/
+python3.12 -mvenv venv_tmp_20241217
+source venv_tmp_20241217/bin/activate
+source ~/setup_proxy
+pip install --upgrade pip
+pip install mod_wsgi
+# Edit vhosts to set update wsgi library:
+vi /sw_ux/httpd0(1|2)/conf.d/vhosts.conf
+# Update the LoadModule to point to the new shared library:
+LoadModule wsgi_module "/apps_ux/apps_(dlvr|test|prod)/venv_tmp_20241217/lib/python3.12/site-packages/mod_wsgi/server/mod_wsgi-py312.cpython-312-x86_64-linux-gnu.so"
+# Save file and restart 
+exit
+sudo systemctl restart httpd0(1|2)
+```
+
+### 3. Perform deployment
+The `migrations` variable must be set as follows (empty line ensure migrations are complete):
 ```yaml
 migrations:
   - "bcfms 1082_drop_materialized_views"
@@ -37,33 +58,24 @@ migrations:
   - ""
 ```
 
-### Upgrade BCFMS
-1. Add privileged user config and apply migrations
+### 4. Set WSGI module in Apache to standard VENV and remove temp venv
 
-```
-# cd /apps_ux/apps_<env>
-# source bcfms_<env>_venv/bin/activate
-# cd bcfms
-# vi bcfms/settings_admin.py
-    File should contain:
-       PG_SUPERUSER="postgres"
-       PG_SUPERUSER_PW="<postgres user>"
-# python3 manage.py migrate
-# rm bcfms/settings_admin.py
-```
-
-### 3. Run migrations (Needs to be phased to handle recreation of core functions)
+To allow the deployment to complete cleanly, a 3.12 version of `mod_wsgi` needs to be deployed as follows:
 ```shell
-# sudo -uwwwadm /bin/bash
-# cd /apps_ux/apps_<env>
-# source bcfms_<env>_venv/bin/activate
-# cd bcfms
-# python3.11 manage.py migrate bcfms 1082_drop_materialized_views
-# python3.11 manage.py migrate models
-# python3.11 manage.py migrate
+sudo -uwwwadm /bin/bash
+# Edit vhosts to set update wsgi library:
+vi /sw_ux/httpd0(1|2)/conf.d/vhosts.conf
+# Update the LoadModule to point to the standard shared library:
+LoadModule wsgi_module "/apps_ux/apps_(dlvr|test|prod)/bcfms_test_venv/lib/python3.12/site-packages/mod_wsgi/server/mod_wsgi-py312.cpython-312-x86_64-linux-gnu.so"
+# Save file and restart Apache service
+exit
+sudo systemctl restart httpd0(1|2)
+sudo -uwwwadm /bin/bash
+cd /apps_ux/apps_(dlvr|test|prod)/
+rm -Rf venv_tmp_20241217
 ```
 
-### 4. Reindex the database
+### 5. Reindex the database
 After all migrations have been completed the database needs to be re-indexed to
 pickup the geometry feature IDs.
 ```shell
