--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -24,6 +24,13 @@ Backup database:
 Need to update the vhosts.conf to point to the 3.12 version of the WSGI library
 Need to restart the Apache HTTPD server before the build_development call
 to pick up the new VENV
+The `migrations` variable must be set as follows (empty line ensure migrations are complete):
+```yaml
+migrations:
+  - "bcrhp 1081_drop_materialized_views"
+  - "models"
+  - ""
+```
 
 ### 3. Run migrations (Needs to be phased to handle recreation of core functions)
 ```shell
