--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -1,6 +1,6 @@
 BCRHP 1.3.0 release notes
 ------------------------
-Release to update Arches Core to 7.6.0
+Release to update Arches Core to 7.6.x
 
 ### Bug fixes and enhancements
 
@@ -11,13 +11,13 @@ None
 
 Backup database:
 ```shell
-# sudo -u wwwadm /bin/bash
-# cd /apps_ux/apps_[env]/backups/database
-# chmod 700 .
-# pg_dump -Upostgres bcrhp_[env] > 2024-10-15_pre_1.2.0.sql
-# gzip 2024-10-15_pre_1.2.0.sql
-# chmod 400 2024-10-15_pre_1.2.0.sql.gz
-# chmod 500 .
+sudo -u wwwadm /bin/bash
+cd /apps_ux/apps_[env]/backups/database
+chmod 700 .
+pg_dump -Upostgres bcrhp_[env] > 2024-10-15_bcrhp_pre_1.3.0.sql
+gzip 2024-10-15_bcrhp_pre_1.3.0.sql
+chmod 400 2024-10-15_bcrhp_pre_1.3.0.sql.gz
+chmod 500 .
 ```
 
 ### 2. Perform Application deployment
@@ -32,25 +32,29 @@ migrations:
   - ""
 ```
 
-### 3. Run migrations (Needs to be phased to handle recreation of core functions)
-```shell
-# sudo -uwwwadm /bin/bash
-# cd /apps_ux/apps_<env>
-# source bcrhp_<env>_venv/bin/activate
-# cd bcrhp
-# python3 manage.py migrate bcrhp 1081_drop_materialized_views
-# python3 manage.py migrate models
-# python3 manage.py migrate
-```
-
-
-### 4. Reindex the database
+### 3. Reindex the database
 After all migrations have been completed the database needs to be re-indexed to
 pickup the geometry feature IDs.
 ```shell
-# sudo -uwwwadm /bin/bash
-# cd /apps_ux/apps_<env>
-# source bcrhp_<env>_venv/bin/activate
-# cd bcrhp
-# python manage.py bc_reindex_database
+sudo -uwwwadm /bin/bash
+cd /apps_ux/apps_<env>
+source bcrhp_<env>_venv/bin/activate
+cd bcrhp
+python manage.py bc_reindex_database
 ```
+
+### 4. Restart the apache server
+sudo systemctl restart httpd0(1|2)
+
+### 5. Rebuild the frontend assets and perform collectstatic
+sudo -uwwwadm /bin/bash
+cd /apps_ux/apps_<env>
+source bcrhp_<env>_venv/bin/activate
+cd bcrhp
+source ~/setup_proxy
+rm -Rf bcrhp/staticfiles bcrhp/media/build
+npm run build_development
+python manage.py collectstatic
+
+### 6. Restart the apache server
+sudo systemctl restart httpd0(1|2)
