Update release readme

--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -44,9 +44,12 @@ python manage.py bc_reindex_database
 ```
 
 ### 4. Restart the apache server
+```shell
 sudo systemctl restart httpd0(1|2)
+```
 
 ### 5. Rebuild the frontend assets and perform collectstatic
+```shell
 sudo -uwwwadm /bin/bash
 cd /apps_ux/apps_<env>
 source bcrhp_<env>_venv/bin/activate
@@ -55,6 +58,17 @@ source ~/setup_proxy
 rm -Rf bcrhp/staticfiles bcrhp/media/build
 npm run build_development
 python manage.py collectstatic
+```
 
 ### 6. Restart the apache server
+```shell
 sudo systemctl restart httpd0(1|2)
+```
+
+### 6. Restart the celery broker
+The celery broker needs to be restarted to pickup the source code changes.
+```shell
+sudo -uwwwsvr /bin/bash
+s6-svc -d /apps_ux/s6_services/bcrhp_celery_<env>/
+s6-svc -u /apps_ux/s6_services/bcrhp_celery_<env>/
+```
