813 - Add steps to Readme for putting system into maintenance mode.

--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -9,7 +9,14 @@ None
 
 ### 1. BEFORE UPGRADING (!!! IMPORTANT !!!)
 
-Backup database:
+1. Update the maintenance page with appropriate dates and details. Maintenance page is found at `/sw_ux/httpd0(1|2)/www/html/maintenance.html`
+2. Put system into maintenance mode:
+```shell
+touch /apps_ux/apps_(dlvr|test|prod)/maintenance/bcrhp
+```
+3. Confirm system in maintenance mode by accessing:
+`https://(|dlvr|test)apps.nrs.gov.bc.ca/bcrhp`. System should not be live, and maintenance page should be displayed.
+4. Backup database:
 ```shell
 sudo -u wwwadm /bin/bash
 cd /apps_ux/apps_[env]/backups/database
