dev - Add instructions to restore database backup 1082 - Update 1.1.0 readme 1086 - Set container hostnames, start of docker readme 1204 - Remove debug statement

--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -1,9 +1,29 @@
 BCFMS 1.1.0 release notes
 ------------------------
-This release implements changes to support public access
-
+Release to update Arches Core to 7.6.x
 
 ### Bug fixes and enhancements
+- 1082,1084 : Update BCFMS for Arches Core 7.6.x
+- 1086: Update Docker container for 7.6.x
+- 1120: Updates to Filter by Feature
+- 1125: Updates to MVT framework
+- 1146: Fix UI issues caused by upgrade
+- 1170: Update Migrations pattern for database objects (external SQL)
+- 1203: Move common assets to separate repo and Django app
+- 1204: Fix fossil type descriptors function
+- 1210: Hide Sandbox geometries by default
+- 1214: Email link incorrect
+- 1218: Unable to auto-generate research plan report #
+- 1219: Add BCFMS & Arches Core version numbers to front page
+
+Arches Core bugs:
+- 11730: resource_x_resource not being deleted
+- 11578: Search filters should be request.method agnostic (ongoing)
+- 11716: resolve(reverse()) bug
+- 11679: Edit button not displaying on map popup
+- 11689: Webpack doesn't resolve app frontend resources w/ symlink
+- 11729: Template overrides in Arhces Applications are ignored
+- 11723: PUBLIC_SERVER_ADDRESS can have conflicting requirements
 
 ### Dependency changes:
 ```
@@ -16,17 +36,23 @@ Nodejs > 20.16.0
 ```
 
 This release relaxes the upper bound on Django to add compatibility with further Django 4.2.x patch releases without requiring a corresponding Arches patch release.
-### BEFORE UPGRADING (!!! IMPORTANT !!!)
-
-1. Backup database:
+### 1. BEFORE UPGRADING (!!! IMPORTANT !!!)
+1. Update the maintenance page with appropriate dates and details. Maintenance page is found at `/sw_ux/httpd0(1|2)/www/html/maintenance.html`
+2. Put system into maintenance mode:
 ```shell
-# sudo -u wwwadm /bin/bash
-# cd /apps_ux/apps_[env]/backups/database
-# chmod 700 .
-# pg_dump -Upostgres bcfms_[env] > 2024-11-28_bcfms_pre_1.1.0.sql
-# gzip 2024-11-28_bcfms_pre_1.1.0.sql
-# chmod 400 2024-11-28_bcfms_pre_1.1.0.sql.gz
-# chmod 500 .
+touch /apps_ux/apps_(dlvr|test|prod)/maintenance/bcfms
+```
+3. Confirm system in maintenance mode by accessing:
+   `https://(|dlvr|test)apps.nrs.gov.bc.ca/bc-fossil-management`. System should not be live, and maintenance page should be displayed.
+4. Backup database:
+```shell
+sudo -u wwwadm /bin/bash
+cd /apps_ux/apps_[env]/backups/database
+chmod 700 .
+pg_dump -Upostgres bcfms_[env] > 2025-01-29_bcfms_pre_1.1.0.sql
+gzip 2025-01-29_bcfms_pre_1.1.0.sql
+chmod 400 2025-01-29_bcfms_pre_1.1.0.sql.gz
+chmod 500 .
 ```
 
 ### 2. Update WSGI module in Apache (First deployment only)
@@ -50,12 +76,26 @@ sudo systemctl restart httpd0(1|2)
 ```
 
 ### 3. Perform deployment
-The `migrations` variable must be set as follows (empty line ensure migrations are complete):
+1. The source code branches are as follows:
 ```yaml
+config_branch: "bcfms/release/1.1.0"
+private_branch: "main"
+core_repo_tag: "v7.6.4.1_bcgov" 
+common_repo_tag: "v1.0.0"
+```
+
+2. The `migrations` variable must be set as follows (empty line ensure migrations are complete):
+```yaml
+perform_migration: True
+migrate_as_superuser: True
 migrations:
   - "bcfms 1082_drop_materialized_views"
   - "models"
   - ""
+```
+3. Run the migration from the ansible-deployer docker image:
+```shell
+./run_playbook.sh arches-app.yml (dlvr|test|prod) bcfms
 ```
 
 ### 4. Set WSGI module in Apache to standard VENV and remove temp venv
@@ -66,7 +106,7 @@ sudo -uwwwadm /bin/bash
 # Edit vhosts to set update wsgi library:
 vi /sw_ux/httpd0(1|2)/conf.d/vhosts.conf
 # Update the LoadModule to point to the standard shared library:
-LoadModule wsgi_module "/apps_ux/apps_(dlvr|test|prod)/bcfms_test_venv/lib/python3.12/site-packages/mod_wsgi/server/mod_wsgi-py312.cpython-312-x86_64-linux-gnu.so"
+LoadModule wsgi_module "/apps_ux/apps_(dlvr|test|prod)/bcfms_(dlvr|test|prod)_venv/lib/python3.12/site-packages/mod_wsgi/server/mod_wsgi-py312.cpython-312-x86_64-linux-gnu.so"
 # Save file and restart Apache service
 exit
 sudo systemctl restart httpd0(1|2)
@@ -79,9 +119,40 @@ rm -Rf venv_tmp_20241217
 After all migrations have been completed the database needs to be re-indexed to
 pickup the geometry feature IDs.
 ```shell
-# sudo -uwwwadm /bin/bash
-# cd /apps_ux/apps_<env>
-# source bcfms_<env>_venv/bin/activate
-# cd bcfms
-# python manage.py bc_reindex_database
+sudo -uwwwadm /bin/bash
+cd /apps_ux/apps_<env>
+source bcfms_<env>_venv/bin/activate
+cd bcfms
+python manage.py bc_reindex_database
+```
+
+### 6. Restart the apache server
+```shell
+sudo systemctl restart httpd0(1|2)
+```
+
+### 7. Rebuild the frontend assets and perform collectstatic
+```shell
+sudo -uwwwadm /bin/bash
+cd /apps_ux/apps_<env>
+source bcfms_<env>_venv/bin/activate
+cd bcfms
+source ~/setup_proxy
+rm -Rf bcfms/staticfiles bcfms/media/build
+python manage.py check
+npm run build_development
+python manage.py collectstatic
+```
+
+### 9. Restart the apache server
+```shell
+sudo systemctl restart httpd0(1|2)
+```
+
+### 9. Restart the celery broker
+The celery broker needs to be restarted to pickup the source code changes.
+```shell
+sudo -uwwwsvr /bin/bash
+s6-svc -d /apps_ux/s6_services/bcfms_celery_<env>/
+s6-svc -u /apps_ux/s6_services/bcfms_celery_<env>/
 ```
