--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -3,9 +3,38 @@ BCRHP 1.3.0 release notes
 Release to update Arches Core to 7.6.x
 
 ### Bug fixes and enhancements
+- 813: Allow system to be put in maintenance mode
+- 1081: Update BCRHP for Arches Core 7.6.x
+- 1086: Update Docker container for 7.6.x
+- 1120: Updates to Filter by Feature
+- 1125: Updates to MVT framework
+- 1146: Fix UI issues caused by upgrade
+- 1168: Fix chronology index
+- 1170: Update Migrations pattern for database objects (external SQL)
+- 1203: Move common assets to separate repo and Django app
+- 1206: Remove unused widget config
+- 1206: Fix borden number regexp string
+- 1167: Update CI/CD Anssible scripts
+- 1223: Map popup card missing links
+- 1224: Delete duplicate overlays
 
+Arches Core bugs:
+- 11730: resource_x_resource not being deleted
+- 11578: Search filters should be request.method agnostic (ongoing)
+- 11716: resolve(reverse()) bug
+- 11679: Edit button not displaying on map popup
+- 11689: Webpack doesn't resolve app frontend resources w/ symlink
+- 11729: Template overrides in Arhces Applications are ignored
+- 11723: PUBLIC_SERVER_ADDRESS can have conflicting requirements
 ### Dependency changes:
-None
+```
+Python:
+3.9.18 -> 3.12.1
+    Upgraded:
+        Arches 7.5.2 -> 7.6.3
+
+Nodejs > 20.16.0
+```
 
 ### 1. BEFORE UPGRADING (!!! IMPORTANT !!!)
 
@@ -27,19 +56,32 @@ chmod 400 2024-10-15_bcrhp_pre_1.3.0.sql.gz
 chmod 500 .
 ```
 
-### 2. Perform Application deployment
-Need to update the vhosts.conf to point to the 3.12 version of the WSGI library
-Need to restart the Apache HTTPD server before the build_development call
+### 2. Update WSGI module in Apache (First deployment only)
+**_!!IMPORTANT!!_**
+- See BCFMS 1.0.0 readme for instructions to update the Apache configuration.
+- Need to update the vhosts.conf to point to the 3.12 version of the WSGI library
+- Need to restart the Apache HTTPD server before the build_development call
 to pick up the new VENV
-The `migrations` variable must be set as follows (empty line ensure migrations are complete):
+
+### 3. Perform Application deployment
+The source code branches are as follows:
 ```yaml
+config_branch: "bcrhp/release/1.3.0"
+private_branch: "main"
+core_repo_tag: "v7.6.4.1_bcgov" 
+common_repo_tag: "v1.0.0"
+```
+The migration variables must be set as follows (empty line ensure migrations are complete):
+```yaml
+perform_migration: True
+migrate_as_superuser: True
 migrations:
   - "bcrhp 1081_drop_materialized_views"
   - "models"
   - ""
 ```
 
-### 3. Reindex the database
+### 4. Reindex the database
 After all migrations have been completed the database needs to be re-indexed to
 pickup the geometry feature IDs.
 ```shell
@@ -63,6 +105,7 @@ source bcrhp_<env>_venv/bin/activate
 cd bcrhp
 source ~/setup_proxy
 rm -Rf bcrhp/staticfiles bcrhp/media/build
+python manage.py check
 npm run build_development
 python manage.py collectstatic
 ```
@@ -72,7 +115,7 @@ python manage.py collectstatic
 sudo systemctl restart httpd0(1|2)
 ```
 
-### 6. Restart the celery broker
+### 7. Restart the celery broker
 The celery broker needs to be restarted to pickup the source code changes.
 ```shell
 sudo -uwwwsvr /bin/bash
