dev - Update Arches version in readme

--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -3,6 +3,7 @@ BCFMS 1.1.0 release notes
 Release to update Arches Core to 7.6.x
 
 ### Bug fixes and enhancements
+- 813: Allow system to be put in maintenance mode
 - 1082,1084 : Update BCFMS for Arches Core 7.6.x
 - 1086: Update Docker container for 7.6.x
 - 1120: Updates to Filter by Feature
@@ -30,7 +31,7 @@ Arches Core bugs:
 Python:
 3.9.18 -> 3.12.1
     Upgraded:
-        Arches 7.5.2 -> 7.6.3
+        Arches 7.5.2 -> 7.6.4
 
 Nodejs > 20.16.0
 ```
