div - Minor tweaks to readme

--- a/src/bcrhp/bcrhp/releases/1.3.0.md
+++ b/src/bcrhp/bcrhp/releases/1.3.0.md
@@ -58,7 +58,7 @@ chmod 500 .
 
 ### 2. Update WSGI module in Apache (First deployment only)
 **_!!IMPORTANT!!_**
-- See BCFMS 1.0.0 readme for instructions to update the Apache configuration.
+- See BCFMS 1.1.0 readme for instructions to update the Apache configuration.
 - Need to update the vhosts.conf to point to the 3.12 version of the WSGI library
 - Need to restart the Apache HTTPD server before the build_development call
 to pick up the new VENV
@@ -90,6 +90,7 @@ cd /apps_ux/apps_<env>
 source bcrhp_<env>_venv/bin/activate
 cd bcrhp
 python manage.py bc_reindex_database
+exit
 ```
 
 ### 4. Restart the apache server
@@ -108,6 +109,7 @@ rm -Rf bcrhp/staticfiles bcrhp/media/build
 python manage.py check
 npm run build_development
 python manage.py collectstatic
+exit
 ```
 
 ### 6. Restart the apache server
@@ -121,4 +123,10 @@ The celery broker needs to be restarted to pickup the source code changes.
 sudo -uwwwsvr /bin/bash
 s6-svc -d /apps_ux/s6_services/bcrhp_celery_<env>/
 s6-svc -u /apps_ux/s6_services/bcrhp_celery_<env>/
+exit
+```
+
+### 8. Take system out of maintenance mode:
+```shell
+sudo -uwwwadm rm /apps_ux/apps_(dlvr|test|prod)/maintenance/bcrhp
 ```
