dev - Tweak readme, resolve conflict with BCHRP in common/

--- a/src/bcfms/bcfms/releases/1.1.0.md
+++ b/src/bcfms/bcfms/releases/1.1.0.md
@@ -125,6 +125,7 @@ cd /apps_ux/apps_<env>
 source bcfms_<env>_venv/bin/activate
 cd bcfms
 python manage.py bc_reindex_database
+exit
 ```
 
 ### 6. Restart the apache server
@@ -143,6 +144,7 @@ rm -Rf bcfms/staticfiles bcfms/media/build
 python manage.py check
 npm run build_development
 python manage.py collectstatic
+exit
 ```
 
 ### 9. Restart the apache server
@@ -156,4 +158,10 @@ The celery broker needs to be restarted to pickup the source code changes.
 sudo -uwwwsvr /bin/bash
 s6-svc -d /apps_ux/s6_services/bcfms_celery_<env>/
 s6-svc -u /apps_ux/s6_services/bcfms_celery_<env>/
+exit
+```
+
+### 10. Take system out of maintenance mode:
+```shell
+sudo -uwwwadm rm /apps_ux/apps_(dlvr|test|prod)/maintenance/bcfms
 ```
